common-applications/test-environment/openeuler-easyeditor/server/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: server
  namespace: openeuler-easyeditor
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - name: server
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/easyeditor/server-test:v1.0.20230303154202
        resources:
          requests:
            cpu: 1000m
            memory: 2000Mi
          limits:
            cpu: 1000m
            memory: 2000Mi
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /var/lib/easyedit/application.yaml
          name: easyeditor-secret
          subPath: application.yaml
      volumes:
      - name: easyeditor-secret
        secret:
            secretName: easyeditor-secret
